Make the table show up and be not present when page first loads

--- a/amortCalc.html
+++ b/amortCalc.html
@@ -38,7 +38,7 @@
       <h2 id="totalInt"></h2>
       <h2 id="sumPmts"></h2>
     </div>
-    <div class="amortTable">
+    <div class="amortTable" id="amortTable">
 
     </div>
     <script type="text/javascript" src="./amortCalc.js"></script>
